Removing version spec from zmq extension as it doesn't seem to work well

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=5.4",
         "ext-pcntl": "*",
-        "ext-zmq": ">=1.1",
+        "ext-zmq": "*",
         "zendframework/zendframework": ">=2.2.0"
     }
 }
