--- a/composer.json
+++ b/composer.json
@@ -24,16 +24,7 @@
         "php": ">=5.5",
         "ext-zmq": "*",
         "ext-posix": "*",
-        "zendframework/zend-stdlib": "~2.5.0",
-        "zendframework/zend-eventmanager": "~2.5.0",
-        "zendframework/zend-serializer": "~2.5.0",
-        "zendframework/zend-json": "~2.5.0",
-        "zendframework/zend-log": "~2.5.0",
-        "zendframework/zend-view": "~2.5.0",
-        "zendframework/zend-modulemanager": "~2.5.0",
-        "zendframework/zend-servicemanager": "~2.5.0",
-        "zendframework/zend-console": "~2.5.0",
-        "zendframework/zend-mvc": "~2.5.0"
+        "zendframework/zendframework": ">=2.4.0"
     },
     "suggest": {
         "ext-pcntl": "Allows signal handling and cleaner shutdown of Worker processes"
