--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,19 @@
         }
     },
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.6",
         "ext-zmq": "*",
         "ext-posix": "*",
-        "zendframework/zendframework": ">=2.4.0"
+        "zendframework/zend-eventmanager": "^2.5",
+        "zendframework/zend-modulemanager": "^2.5",
+        "zendframework/zend-servicemanager": "^2.5",
+        "zendframework/zend-console": "^2.5",
+        "zendframework/zend-view": "^2.5",
+        "zendframework/zend-mvc": "^2.5",
+        "zendframework/zend-json": "^2.5",
+        "zendframework/zend-log": "^2.5",
+        "zendframework/zend-stdlib": "^2.5",
+        "zendframework/zend-serializer": "^2.5"
     },
     "suggest": {
         "ext-pcntl": "Allows signal handling and cleaner shutdown of Worker processes"
